JJ was in the house

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <!-- jj on nav bar -->
+    <h1>JJ was in the house</h1>
+    
 
 
     <!-- Someone on "Focus Your Business" Section  -->
