--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <!-- jj on nav bar -->
 
 
-    <!-- Someone on "Focus Your Business" Section  -->
+    <!-- Gianni on "Focus Your Business" Section  -->
 
 
-    <!-- Someone on "How It Works" Section (both blocks) -->
+    <!-- Danny on "How It Works" Section (both blocks) -->
 
 
-        <!-- Someone on FOOTER -->
+    <!-- Abu on FOOTER -->
     
 
 </body>
