--- a/index.html
+++ b/index.html
@@ -11,13 +11,38 @@
 </head>
 <body>
     <!-- jj on nav bar -->
-    <h1>JJ was in the house</h1>
+    
 
     <!-- Gianni on "Focus Your Business" Section  -->
 
 
     <!-- Danny on "How It Works" Section (both blocks) -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<div class="title">
+    <h3>How it Works</h3>
+</div>
+<main>
+<div class="work">
+    <article>
+    <p>lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a.</p>
+    </article>
+</div>
+</main>
+<div class="info">
+        <img src="./images/Collect-info.jpeg"
+        <article>
+            <h4>Collect Useful Info</h4>
+            <p>Deliver the world of payment options and seamless checkout experinces, making it easy for your customer to pay for your products and services.</p>
+        </article>
+    </div>
 
+</html>
 
     <!-- Abu on FOOTER -->
     
