--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<header>
-<h1>focus on your business let us handle everything else subscription billing, powered with revenue retention tools and a seamless customer experience -without the technical hurdles.</h1>
-<link rel="stylesheet" "text.css"href="/main.css">
+<head>
+    <link rel="stylesheet text.css"href="/main.css">
 
-</header>> up free</button>
-<button>chat with us</
-<button style="background-color: aqua ;"button>
-<button style=""</button>
-    <link rel="stylesheet" "text.css"href="/main.css">
+</head>
 <body>
-    <img src="nice.jpg"/>
+<header>
+<div>
+    <h1>focus on your business</h1> 
+<p>let us handle everything else subscription billing, powered with revenue retention tools and a seamless customer experience -without the technical hurdles.</p>
+</div>
+<img src="nice.jpg"/>
+</header>
+<button>sign up free</button>
+<button>chat with us</button>
+
+
+
 
 </body>
 ,<nav>
